home section done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-      ok....
+    <div class="banner">
+        <div class="left-side">
+            <div class="content-inner">
+                <h3 class="banner-title">SAHARIAR</h3>
+                <h3 class="simple-title">EMON</h3>
+                <span class="sub-title">Creative Web and App developer</span>
+            </div>
+        </div>
+        <div class="right-side">
+            <section>
+                <div class="slider">
+                    <div class="slide slide-1 active">
+
+                    </div>
+                    <div class="slide slide-2 ">
+
+                    </div>
+                    <div class="slide slide-3">
+
+                    </div>
+                    <div class="slide slide-4">
+
+                    </div>
+                    <div class="button">
+                        <div class="prev"><i class="fa-solid fa-arrow-left"></i></div>
+                        <div class="next"><i class="fa-solid fa-arrow-right"></i></div>
+                    </div>
+                    <div class="dots"></div>
+                </div>
+            </section>
+        </div>
+    </div>
+    <script src="./js/app.js"></script>
 </body>
+
 </html>
