banner section change again

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </div>
     </nav>
-    <div class="banner">
+    <!-- <div class="banner">
         <div class="left-side">
             <div class="content-inner">
                 <h3 class="banner-title">SAHARIAR</h3>
@@ -73,7 +73,28 @@
             </section>
         </div>
     </div>
-    </div>
+    </div> -->
+    <section>
+        <div class="slider">
+            <div class="slide slide-1 active">
+
+            </div>
+            <div class="slide slide-2 ">
+
+            </div>
+            <div class="slide slide-3">
+
+            </div>
+            <div class="slide slide-4">
+
+            </div>
+            <div class="button">
+                <div class="prev"><i class="fa-solid fa-arrow-left"></i></div>
+                <div class="next"><i class="fa-solid fa-arrow-right"></i></div>
+            </div>
+            <div class="dots"></div>
+        </div>
+    </section>
     <script src="./js/app.js"></script>
 </body>
 
