--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="dots"></div>
         </div>
     </section>
-    <script src="./js/app.js"></script>
+    <!-- <script src="./js/app.js"></script> -->
 </body>
 
 </html>
