--- a/index.html
+++ b/index.html
@@ -74,28 +74,36 @@
         </div>
     </div>
     </div> -->
-    <section>
-        <div class="slider">
-            <div class="slide slide-1 active">
 
-            </div>
-            <div class="slide slide-2 ">
-
-            </div>
-            <div class="slide slide-3">
-
-            </div>
-            <div class="slide slide-4">
-
-            </div>
-            <div class="button">
-                <div class="prev"><i class="fa-solid fa-arrow-left"></i></div>
-                <div class="next"><i class="fa-solid fa-arrow-right"></i></div>
-            </div>
-            <div class="dots"></div>
+    <div class="banner-section">
+        <div class="content-inner">
+            <h3 class="banner-title">SAHARIAR</h3>
+            <h3 class="simple-title">EMON</h3>
+            <span class="sub-title">Creative Web and App developer</span>
         </div>
-    </section>
-    <!-- <script src="./js/app.js"></script> -->
+        <section>
+            <div class="slider">
+                <div class="slide slide-1 active">
+
+                </div>
+                <div class="slide slide-2 ">
+
+                </div>
+                <div class="slide slide-3">
+
+                </div>
+                <div class="slide slide-4">
+
+                </div>
+                <div class="button">
+                    <div class="prev"><i class="fa-solid fa-arrow-left"></i></div>
+                    <div class="next"><i class="fa-solid fa-arrow-right"></i></div>
+                </div>
+                <div class="dots"></div>
+            </div>
+        </section>
+    </div>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
