nav and banner newly done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="">Contact</a>
                 </li>
             </ul>
-            <div class="bar-menu">
+            <div id="bar-menu">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
