code organize done

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     <div class="prev"><i class="fa-solid fa-arrow-left"></i></div>
                     <div class="next"><i class="fa-solid fa-arrow-right"></i></div>
                 </div>
-                <div class="dots"></div>
+                <!-- <div class="dots"></div> -->
             </div>
         </div>
         <div class="content-inner">
             <h3 class="banner-title">SAHARIAR</h3>
             <h3 class="simple-title">EMON</h3>
-            <span class="sub-title">Creative Web and App develope</span>
+            <span class="sub-title">Creative Web and App developer</span>
         </div> 
     </div>
     <!-- about section -->
