all section code oraganization done

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         </div>
     </nav>
     <div class="banner">
+        <div class="content-inner">
+            <h3 class="banner-title">SAHARIAR</h3>
+            <h3 class="simple-title">EMON</h3>
+            <span class="sub-title">Creative Web and App developer</span>
+        </div>
         <div class="main-slider">
             <div class="slider">
                 <div class="slide slide-1 active">
@@ -58,11 +63,6 @@
 
                 </div>
             </div>
-        </div>
-        <div class="content-inner">
-            <h3 class="banner-title">SAHARIAR</h3>
-            <h3 class="simple-title">EMON</h3>
-            <span class="sub-title">Creative Web and App developer</span>
         </div>
     </div>
     <!-- about section -->
@@ -116,8 +116,7 @@
                         <div class="s-slide">
                             <div class="container">
                                 <div class="icon">
-                                    <img src="https://cdn-icons-png.flaticon.com/512/688/688113.png"
-                                        alt="">
+                                    <img src="https://cdn-icons-png.flaticon.com/512/688/688113.png" alt="">
                                 </div>
                                 <div class="description">
                                     <h1 class="des-header">Adove PhotoShop</h1>
@@ -132,8 +131,7 @@
                         <div class="s-slide">
                             <div class="container">
                                 <div class="icon">
-                                    <img src="https://cdn-icons-png.flaticon.com/512/775/775497.png"
-                                        alt="">
+                                    <img src="https://cdn-icons-png.flaticon.com/512/775/775497.png" alt="">
                                 </div>
                                 <div class="description">
                                     <h1 class="des-header">Creative Design</h1>
@@ -148,8 +146,7 @@
                         <div class="s-slide">
                             <div class="container">
                                 <div class="icon">
-                                    <img src="https://cdn-icons-png.flaticon.com/512/1283/1283342.png"
-                                        alt="">
+                                    <img src="https://cdn-icons-png.flaticon.com/512/1283/1283342.png" alt="">
                                 </div>
                                 <div class="description">
                                     <h1 class="des-header">Brand Idenitity</h1>
