portfolio nav functionality added

--- a/index.html
+++ b/index.html
@@ -167,6 +167,31 @@
             </div>
         </div>
     </div>
+    <div class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="title-holder">
+                    <div class="title-left">
+                        <h3>FEATURED WORKS</h3>
+                    </div>
+                    <div class="portfolio-title-right">
+                         <div class="filter">
+                            <ul  class="filter-item">
+                                <li><a class="active" href="#">React</a></li>
+                                <li><a href="#">redux</a></li>
+                                <li><a href="#">javascript</a></li>
+                                <li><a href="#">next</a></li>
+                            </ul>
+                         </div>
+                         <a href="" id="filter-open"><span></span></a>
+                    </div>
+                </div>
+                <div class="filter-holder">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./js/app.js"></script>
 </body>
 
