portfolio title holder done

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             </div>
         </div>
     </div>
-    <!-- about section -->
     <div class="about container">
         <div class="row">
             <div class="about-left">
@@ -170,24 +169,26 @@
     <div class="portfolio">
         <div class="container">
             <div class="row">
-                <div class="title-holder">
+                <div class="portfolio-title-holder">
                     <div class="title-left">
-                        <h3>FEATURED WORKS</h3>
+                        <h3>FEATURED WORKS <span class="bg-title">portfolio</span></h3>
                     </div>
                     <div class="portfolio-title-right">
-                         <div class="filter">
-                            <ul  class="filter-item">
+                        <div class="filter">
+                            <ul class="filter-item">
                                 <li><a class="active" href="#">React</a></li>
                                 <li><a href="#">redux</a></li>
                                 <li><a href="#">javascript</a></li>
                                 <li><a href="#">next</a></li>
                             </ul>
-                         </div>
-                         <a href="" id="filter-open"><span></span></a>
+                        </div>
+                        <div id="filter-open">
+
+                        </div>
                     </div>
                 </div>
                 <div class="filter-holder">
-                    
+
                 </div>
             </div>
         </div>
