portfolio title section done not completely

--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
                             </ul>
                         </div>
                         <div id="filter-open">
-
+                            <div class="div-1"></div>
+                            <div class="div-1"></div>
+                            <div class="div-1"></div>
                         </div>
                     </div>
                 </div>
