portfolio section done without responsive

--- a/index.html
+++ b/index.html
@@ -183,14 +183,189 @@
                             </ul>
                         </div>
                         <div id="filter-open">
-                            <div class="div-1"></div>
-                            <div class="div-1"></div>
-                            <div class="div-1"></div>
+                            <div class="sp-1"></div>
+                            <div class="sp-2"></div>
+                            <div class="sp-3"></div>
                         </div>
                     </div>
                 </div>
                 <div class="filter-holder">
-
+                    <ul class="filter-row">
+                        <li>
+                            <a href="">
+                                <div class="item">
+                                    <header>
+                                        <div class="item-icon">
+                                            <div>
+                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
+                                            </div>
+                                            <div>
+                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
+                                                <a href=""><i id="external"
+                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                            </div>
+                                        </div>
+                                        <h5 class="title">Weather App</h5>
+                                        <div class="description">
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                        </div>
+                                    </header>
+                                    <footer>
+                                           <ul class="lan-list">
+                                              <li><a href="">html</a></li>
+                                              <li><a href="">css</a></li>
+                                              <li><a href="">javascript</a></li>
+                                           </ul>
+                                    </footer>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="item">
+                                    <header>
+                                        <div class="item-icon">
+                                            <div>
+                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
+                                            </div>
+                                            <div>
+                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
+                                                <a href=""><i id="external"
+                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                            </div>
+                                        </div>
+                                        <h5 class="title">Weather App</h5>
+                                        <div class="description">
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                        </div>
+                                    </header>
+                                    <footer>
+                                           <ul class="lan-list">
+                                              <li><a href="">html</a></li>
+                                              <li><a href="">css</a></li>
+                                              <li><a href="">javascript</a></li>
+                                           </ul>
+                                    </footer>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="item">
+                                    <header>
+                                        <div class="item-icon">
+                                            <div>
+                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
+                                            </div>
+                                            <div>
+                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
+                                                <a href=""><i id="external"
+                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                            </div>
+                                        </div>
+                                        <h5 class="title">Weather App</h5>
+                                        <div class="description">
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                        </div>
+                                    </header>
+                                    <footer>
+                                           <ul class="lan-list">
+                                              <li><a href="">html</a></li>
+                                              <li><a href="">css</a></li>
+                                              <li><a href="">javascript</a></li>
+                                           </ul>
+                                    </footer>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="item">
+                                    <header>
+                                        <div class="item-icon">
+                                            <div>
+                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
+                                            </div>
+                                            <div>
+                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
+                                                <a href=""><i id="external"
+                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                            </div>
+                                        </div>
+                                        <h5 class="title">Weather App</h5>
+                                        <div class="description">
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                        </div>
+                                    </header>
+                                    <footer>
+                                           <ul class="lan-list">
+                                              <li><a href="">html</a></li>
+                                              <li><a href="">css</a></li>
+                                              <li><a href="">javascript</a></li>
+                                           </ul>
+                                    </footer>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="item">
+                                    <header>
+                                        <div class="item-icon">
+                                            <div>
+                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
+                                            </div>
+                                            <div>
+                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
+                                                <a href=""><i id="external"
+                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                            </div>
+                                        </div>
+                                        <h5 class="title">Weather App</h5>
+                                        <div class="description">
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                        </div>
+                                    </header>
+                                    <footer>
+                                           <ul class="lan-list">
+                                              <li><a href="">html</a></li>
+                                              <li><a href="">css</a></li>
+                                              <li><a href="">javascript</a></li>
+                                           </ul>
+                                    </footer>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div class="item">
+                                    <header>
+                                        <div class="item-icon">
+                                            <div>
+                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
+                                            </div>
+                                            <div>
+                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
+                                                <a href=""><i id="external"
+                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                            </div>
+                                        </div>
+                                        <h5 class="title">Weather App</h5>
+                                        <div class="description">
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                        </div>
+                                    </header>
+                                    <footer>
+                                           <ul class="lan-list">
+                                              <li><a href="">html</a></li>
+                                              <li><a href="">css</a></li>
+                                              <li><a href="">javascript</a></li>
+                                           </ul>
+                                    </footer>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
