--- a/index.html
+++ b/index.html
@@ -183,9 +183,7 @@
                             </ul>
                         </div>
                         <div id="filter-open">
-                            <div class="sp-1"></div>
-                            <div class="sp-2"></div>
-                            <div class="sp-3"></div>
+                             <i class="fa-solid fa-bars-staggered"></i>
                         </div>
                     </div>
                 </div>
