portfolio section modified

--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
                     <div class="portfolio-title-right">
                         <div class="filter">
                             <ul class="filter-item">
-                                <li><a class="active" href="#">React</a></li>
-                                <li><a href="#">redux</a></li>
+                                <li><a class="active" href="#">All</a></li>
+                                <li><a href="#">react</a></li>
                                 <li><a href="#">javascript</a></li>
                                 <li><a href="#">next</a></li>
                             </ul>
                         </div>
                         <div id="filter-open">
-                             <i class="fa-solid fa-bars-staggered"></i>
+                            <i class="fa-solid fa-bars-staggered"></i>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                     <ul class="filter-row">
                         <li>
                             <a href="">
-                                <div class="item">
+                                <div data-filter="react" class="item">
                                     <header>
                                         <div class="item-icon">
                                             <div>
@@ -205,15 +205,46 @@
                                         </div>
                                         <h5 class="title">Weather App</h5>
                                         <div class="description">
-                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the
+                                                OpenWeatherMap API here.</p>
                                         </div>
                                     </header>
                                     <footer>
-                                           <ul class="lan-list">
-                                              <li><a href="">html</a></li>
-                                              <li><a href="">css</a></li>
-                                              <li><a href="">javascript</a></li>
-                                           </ul>
+                                        <div class="nav-links">
+                                            <a href="">react</a>
+                                            <a href="">react-bootstrap</a>
+                                            <a href="">Firebase</a>
+                                        </div>
+                                    </footer>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <div data-filter="javascript" class="item">
+                                    <header>
+                                        <div class="item-icon">
+                                            <div>
+                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
+                                            </div>
+                                            <div>
+                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
+                                                <a href=""><i id="external"
+                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                            </div>
+                                        </div>
+                                        <h5 class="title">Weather App</h5>
+                                        <div class="description">
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the
+                                                OpenWeatherMap API here.</p>
+                                        </div>
+                                    </header>
+                                    <footer>
+                                        <div class="nav-links">
+                                            <a href="">react</a>
+                                            <a href="">react-bootstrap</a>
+                                            <a href="">Firebase</a>
+                                        </div>
                                     </footer>
                                 </div>
                             </a>
@@ -234,15 +265,16 @@
                                         </div>
                                         <h5 class="title">Weather App</h5>
                                         <div class="description">
-                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the
+                                                OpenWeatherMap API here.</p>
                                         </div>
                                     </header>
                                     <footer>
-                                           <ul class="lan-list">
-                                              <li><a href="">html</a></li>
-                                              <li><a href="">css</a></li>
-                                              <li><a href="">javascript</a></li>
-                                           </ul>
+                                        <div class="nav-links">
+                                            <a href="">react</a>
+                                            <a href="">react-bootstrap</a>
+                                            <a href="">Firebase</a>
+                                        </div>
                                     </footer>
                                 </div>
                             </a>
@@ -263,15 +295,16 @@
                                         </div>
                                         <h5 class="title">Weather App</h5>
                                         <div class="description">
-                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the
+                                                OpenWeatherMap API here.</p>
                                         </div>
                                     </header>
                                     <footer>
-                                           <ul class="lan-list">
-                                              <li><a href="">html</a></li>
-                                              <li><a href="">css</a></li>
-                                              <li><a href="">javascript</a></li>
-                                           </ul>
+                                        <div class="nav-links">
+                                            <a href="">react</a>
+                                            <a href="">react-bootstrap</a>
+                                            <a href="">Firebase</a>
+                                        </div>
                                     </footer>
                                 </div>
                             </a>
@@ -292,15 +325,16 @@
                                         </div>
                                         <h5 class="title">Weather App</h5>
                                         <div class="description">
-                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the
+                                                OpenWeatherMap API here.</p>
                                         </div>
                                     </header>
                                     <footer>
-                                           <ul class="lan-list">
-                                              <li><a href="">html</a></li>
-                                              <li><a href="">css</a></li>
-                                              <li><a href="">javascript</a></li>
-                                           </ul>
+                                        <div class="nav-links">
+                                            <a href="">react</a>
+                                            <a href="">react-bootstrap</a>
+                                            <a href="">Firebase</a>
+                                        </div>
                                     </footer>
                                 </div>
                             </a>
@@ -321,44 +355,16 @@
                                         </div>
                                         <h5 class="title">Weather App</h5>
                                         <div class="description">
-                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
+                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the
+                                                OpenWeatherMap API here.</p>
                                         </div>
                                     </header>
                                     <footer>
-                                           <ul class="lan-list">
-                                              <li><a href="">html</a></li>
-                                              <li><a href="">css</a></li>
-                                              <li><a href="">javascript</a></li>
-                                           </ul>
-                                    </footer>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <div class="item">
-                                    <header>
-                                        <div class="item-icon">
-                                            <div>
-                                                <i id="folder-icon" class="fa-solid fa-folder-open"></i>
-                                            </div>
-                                            <div>
-                                                <a href=""><i id="github" class="fa-brands fa-github"></i></a>
-                                                <a href=""><i id="external"
-                                                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                                            </div>
+                                        <div class="nav-links">
+                                            <a href="">react</a>
+                                            <a href="">react-bootstrap</a>
+                                            <a href="">Firebase</a>
                                         </div>
-                                        <h5 class="title">Weather App</h5>
-                                        <div class="description">
-                                            <p>Simple weather app made with HTML, CSS and JavaScript. Utilized the OpenWeatherMap API here.</p>
-                                        </div>
-                                    </header>
-                                    <footer>
-                                           <ul class="lan-list">
-                                              <li><a href="">html</a></li>
-                                              <li><a href="">css</a></li>
-                                              <li><a href="">javascript</a></li>
-                                           </ul>
                                     </footer>
                                 </div>
                             </a>
