delete portfolio functionality

--- a/index.html
+++ b/index.html
@@ -173,25 +173,12 @@
                     <div class="title-left">
                         <h3>FEATURED WORKS <span class="bg-title">portfolio</span></h3>
                     </div>
-                    <div class="portfolio-title-right">
-                        <div class="filter">
-                            <ul class="filter-item">
-                                <li><a class="active" href="#">All</a></li>
-                                <li><a href="#">react</a></li>
-                                <li><a href="#">javascript</a></li>
-                                <li><a href="#">next</a></li>
-                            </ul>
-                        </div>
-                        <div id="filter-open">
-                            <i class="fa-solid fa-bars-staggered"></i>
-                        </div>
-                    </div>
                 </div>
                 <div class="filter-holder">
                     <ul class="filter-row">
                         <li>
                             <a href="">
-                                <div data-filter="react" class="item">
+                                <div class="item react">
                                     <header>
                                         <div class="item-icon">
                                             <div>
@@ -221,7 +208,7 @@
                         </li>
                         <li>
                             <a href="">
-                                <div data-filter="javascript" class="item">
+                                <div class="item">
                                     <header>
                                         <div class="item-icon">
                                             <div>
