code organized portfolio section

--- a/index.html
+++ b/index.html
@@ -170,14 +170,13 @@
         </div>
         </div>
     </section>
-    <section>
+    <section style="background-color:  #F8F9FA;">
         <div class="container portfolio">
-            <!-- <div class="row"> -->
-            <!-- <div class="portfolio-title-holder">
+            <div class="portfolio-title-holder">
                         <div class="title-left">
                             <h3>FEATURED WORKS <span class="bg-title">portfolio</span></h3>
                         </div>
-                    </div> -->
+                    </div>
             <div class="filter-holder">
                 <ul>
                     <li>
